# pytest-cli

./: .gitignore  pyproject.toml  pytest-cli.py
automation/features/: test_basic.py
automation/fixtures/: indirect_param_fixture.py
pytest/: conftest.py
pytest/tests/: test_basic.py
src/: main.py
tests/features/: test_basic.py
tests/fixtures/: factory_example_fixture.py  indirect_param_fixture.py  optional_teardown_fixture.py
