[tool.poetry]
name = "pytest-cli"
version = "0.1.0"
description = ""
authors = ["Adrian Castro <adriantazz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
python-dotenv = "^1.0.1"
pytest-logging = "^2015.11.4"
allure-pytest = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytest-cli = "src.main:main"

[[tool.poetry.packages]]
include = "src"